# viennashe-dev

./: CMakeLists.txt  CTestConfig.cmake  FindPETSc.cmake  LICENSE  README  README.md  changelog
cmake/: CMakeLists.txt.in  FindPETSc.cmake  ViennaSHECommon.cmake  ViennaSHEConfig.cmake.in
doc/: Doxyfile.in
doc/manual/: api.dox  installation.dox  introduction.dox  license.dox  main.dox  physics.dox  viennashe.bib
doc/manual/figures/: chain.eps  chain.fig  energy-band-dos.eps  energy-band-velocity.eps  nin2d.eps  nin2d_geom.eps  nin2d_geom.fig
examples/: CMakeLists.txt
examples/data/: nin2d.in2d
examples/devices/: CMakeLists.txt  half-trigate-PETSC.cpp  half-trigate.cpp  mos1d-dg.cpp  mosfet-PETSC.cpp  mosfet-dg.cpp  mosfet-hcd.cpp  mosfet.cpp  nin-diode-1d.cpp  nin-diode-2d-hde.cpp  nin-diode-2d.cpp  np-diode-bipolar.cpp  resistor.cpp
examples/libviennashe/: CMakeLists.txt  resistor1d-c.c
examples/python/: CMakeLists.txt  resistor.py
libviennashe/: CMakeLists.txt
libviennashe/include/: config.h  device.h  error.h  libviennashe.h  material.h  output.h  quantity.h  simulator.h  sys.h
libviennashe/src/: config.cpp  device.cpp  libviennashe.cpp  material.cpp  output.cpp  quantity.cpp  quantity_register.hpp  quantity_wrappers.hpp  simulator.cpp  viennashe_all.hpp
python/: CMakeLists.txt
python/src/: CMakeLists.txt  device.i  devicetypemaps.i  pyviennashe.i
src/: CMakeLists.txt  boxmesh.cpp  solver.cpp
src/solvers/: log_keys.h  solve.hpp
src/solvers/native/: dense_linear_solver.hpp
src/solvers/petsc/: petsc.hpp  petsc_solver.hpp
src/solvers/viennacl/: all.h  parallel_linear_solver.hpp  serial_linear_solver.hpp
tests/: CMakeLists.txt
tests/data/ushape2d/: ushape.in2d  ushape125.mesh
tests/src/: common.hpp  equilibrium_resistor.cpp  external_1.cpp  external_2.cpp  hde_1d.cpp  logtest.cpp  markov_chains.cpp  mos1d_dg.hpp  mos1d_dg_n.cpp  mos1d_dg_p.cpp  mos1d_potential_kink.cpp  quantity_transfer.cpp  random_numbers.cpp  simple_impurity_scattering.cpp  spherical_harmonics.cpp  spherical_harmonics_iter.cpp  ushape_2d.cpp
viennashe/: accessors.hpp  assemble.hpp  config.hpp  core.hpp  device.hpp  exception.hpp  forwards.h  log_keys.h  mapping.hpp  scharfetter_gummel.hpp  setters.hpp  simulator.hpp  simulator_quantity.hpp  simulator_setup.hpp  trap_level.hpp  version.hpp
viennashe/boxmesh/: boxmesh.hpp
viennashe/io/: add_to_writer.hpp  all.hpp  device_reader_vtk.hpp  exception.hpp  gnuplot_writer.hpp  gnuplot_writer_edf.hpp  initial_guess_writer.hpp  log_keys.h  she_vtk_writer.hpp  vector.hpp
viennashe/log/: log.hpp  nullstream.hpp
viennashe/materials/: all.hpp  dos_RSi.hpp  exception.hpp
viennashe/math/: bernoulli.hpp  constants.hpp  exception.hpp  integrator.hpp  linalg_util.hpp  log_keys.h  random.hpp  spherical_harmonics.hpp
viennashe/models/: all.hpp  bandgap.hpp  carrier_mass.hpp  exception.hpp  hot_carrier.hpp  lineshape.hpp  mobility.hpp  mobility_model.hpp  mobility_parameters.hpp  srh_kinetics.hpp  tunneling.hpp
viennashe/models/markovchain/: chain.hpp  exception.hpp  reaction_rates.hpp  ssa.hpp
viennashe/phonon/: joule_heating.hpp
viennashe/physics/: constants.hpp  dispersion.hpp  exception.hpp  physics.hpp
viennashe/postproc/: all.hpp  current_density.hpp  displacement_current.hpp  electric_field.hpp  electric_flux_density.hpp  potential.hpp  terminal_current.hpp
viennashe/she/: assemble_all.hpp  assemble_boundary.hpp  assemble_common.hpp  assemble_scattering.hpp  assemble_streaming.hpp  assemble_timederivative.hpp  assemble_traps.hpp  boundary_conditions.hpp  df_wrappers.hpp  eliminate.hpp  exception.hpp  expansion_order.hpp  harmonics_coupling.hpp  linear_solver.hpp  log_keys.h  rescaling.hpp  setup_energies.hpp  she_quantity.hpp  timestep_quantities.hpp  transfer_to_new_h_space.hpp
viennashe/she/postproc/: all.hpp  carrier_density.hpp  carrier_energy.hpp  carrier_velocity.hpp  current_density.hpp  expansion_order.hpp  macroscopic.hpp
viennashe/she/scattering/: acoustic_phonon_scattering.hpp  all.hpp  assemble_ee_scattering.hpp  common.hpp  config.hpp  fixed_charge_scattering.hpp  impact_ionization_scattering.hpp  impurity_scattering.hpp  optical_phonon_scattering.hpp  surface_acoustic_phonon_scattering.hpp  surface_roughness_scattering.hpp  surface_scattering.hpp  trapped_charge_scattering.hpp
viennashe/solvers/: config.hpp  exception.hpp  forwards.h
viennashe/util/: block_matrix_writer.hpp  checks.hpp  dual_box_flux.hpp  dump_device_mesh.hpp  enable_if.hpp  exception.hpp  filter.hpp  generate_device.hpp  log_keys.h  misc.hpp  smooth_doping.hpp  timer.hpp
