
# This is the CMake script for the Python bindings

IF(ENABLE_PYTHON_BINDINGS)

  FIND_PACKAGE(SWIG REQUIRED)

  INCLUDE(${SWIG_USE_FILE})

  FIND_PACKAGE(PythonLibs)

  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
  INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/libviennashe/include")

  SET(CMAKE_SWIG_FLAGS "")

  SET_SOURCE_FILES_PROPERTIES(pyviennashe.i PROPERTIES CPLUSPLUS OFF)
  SET_SOURCE_FILES_PROPERTIES(pyviennashe.i PROPERTIES SWIG_FLAGS "-includeall")

  SWIG_ADD_MODULE(pyviennashe python pyviennashe.i )

  SWIG_LINK_LIBRARIES(pyviennashe ${PYTHON_LIBRARIES} viennashe)

ENDIF(ENABLE_PYTHON_BINDINGS)

